# inhouse

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/fastapi/: main.py
examples/files/: main.py
examples/files/prompts/: system.md
examples/rag/: main.py
examples/sqlite/: main.py
releases/v0.1.2/: RELEASE_NOTES.md
releases/v0.2.0/: RELEASE_NOTES.md
releases/v0.2.1/: RELEASE_NOTES.md
releases/v0.3.0/: RELEASE_NOTES.md
src/inhouse/: __init__.py  decorator.py  entry.py  fastapi.py  http_cache.py  keys.py  singleflight.py  store.py  sweeper.py
src/inhouse/fastapi/: __init__.py  decorator.py  keys.py  lifespan.py
src/inhouse/files/: __init__.py  decorator.py  watch.py
src/inhouse/rag/: __init__.py  decorator.py
src/inhouse/sqlite/: __init__.py  copy.py  store.py
tests/: test_decorator_async.py  test_dynamic_ttl.py  test_fastapi_integration.py  test_keys.py  test_lru.py  test_singleflight.py  test_stampede.py  test_store.py  test_sweeper.py
tests/fastapi/: test_http_cache.py  test_integration.py  test_store_isolation.py
tests/files/: test_file_cache.py  test_watch.py
tests/main/: test_decorator_cache_clear.py  test_decorator_sync.py  test_disable_all.py  test_http_cache_core.py  test_keys.py  test_singleflight.py  test_store.py
tests/main/security/: test_http_cache_trust.py  test_route_kwargs.py
tests/rag/: test_rag_cache.py
tests/sqlite/: test_copy.py  test_query_store.py
