[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inhouse"
version = "0.1.0"
description = "Zero-dependency, in-process TTL cache for Python. Optional FastAPI decorators, stampede-safe, LRU-bounded."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Michael Mooney", email = "inhouse@rancero.com" }]
keywords = ["cache", "fastapi", "ttl", "lru", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]
dev = [
    "fastapi>=0.100",
    "httpx>=0.27",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/kineticquant/inhouse"
Repository = "https://github.com/kineticquant/inhouse"
Issues = "https://github.com/kineticquant/inhouse/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/inhouse"]

[tool.hatch.build.targets.wheel.sources]
"src/inhouse" = "inhouse"

[tool.hatch.build.targets.sdist]
include = ["src/inhouse", "README.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
